[package]
name = "openfood-proxy"
version = "0.1.0"
authors = ["emi@pieroshka.dev"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.18"
console_error_panic_hook = { version = "0.1.1", optional = true }
reqwest = "0.11.24"
urlencoding = "2.1.3"
regex = "1.10.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# [build]
# target = "wasm32-unknown-unknown"
